@@ -18,8 +18,8 @@
 package com.winterhavenmc.savagegraveyards.commands;
 
 import com.winterhavenmc.savagegraveyards.PluginMain;
-import com.winterhavenmc.savagegraveyards.messages.MessageId;
-import com.winterhavenmc.savagegraveyards.sounds.SoundId;
+import com.winterhavenmc.savagegraveyards.util.MessageId;
+import com.winterhavenmc.savagegraveyards.util.SoundId;
 
 import org.bukkit.command.Command;
 import org.bukkit.command.CommandSender;
@@ -32,8 +32,8 @@ import java.util.stream.Collectors;
  * Help command implementation<br>
  * displays help and usage messages for plugin commands
  */
-final class HelpSubcommand extends AbstractSubcommand implements Subcommand {
-
+final class HelpSubcommand extends AbstractSubcommand implements Subcommand
+{
 	private final PluginMain plugin;
 	private final SubcommandRegistry subcommandRegistry;
 
@@ -43,7 +43,8 @@ final class HelpSubcommand extends AbstractSubcommand implements Subcommand {
 	 *
 	 * @param plugin reference to plugin main class instance
 	 */
-	HelpSubcommand(final PluginMain plugin, final SubcommandRegistry subcommandRegistry) {
+	HelpSubcommand(final PluginMain plugin, final SubcommandRegistry subcommandRegistry)
+	{
 		this.plugin = Objects.requireNonNull(plugin);
 		this.subcommandRegistry = Objects.requireNonNull(subcommandRegistry);
 		this.name = "help";
@@ -54,10 +55,13 @@ final class HelpSubcommand extends AbstractSubcommand implements Subcommand {
 
 
 	@Override
-	public List<String> onTabComplete(final CommandSender sender, final Command command,
-									  final String alias, final String[] args) {
-
-		if (args.length == 2 && args[0].equalsIgnoreCase(this.name)) {
+	public List<String> onTabComplete(final CommandSender sender,
+	                                  final Command command,
+									  final String alias,
+									  final String[] args)
+	{
+		if (args.length == 2 && args[0].equalsIgnoreCase(this.name))
+		{
 			return subcommandRegistry.getKeys().stream()
 					.map(subcommandRegistry::getSubcommand)
 					.filter(Optional::isPresent)
@@ -72,23 +76,25 @@ final class HelpSubcommand extends AbstractSubcommand implements Subcommand {
 
 
 	@Override
-	public boolean onCommand(final CommandSender sender, final List<String> args) {
-
+	public boolean onCommand(final CommandSender sender, final List<String> args)
+	{
 		// if command sender does not have permission to display help, output error message and return true
-		if (!sender.hasPermission(permissionNode)) {
+		if (!sender.hasPermission(permissionNode))
+		{
 			plugin.messageBuilder.compose(sender, MessageId.PERMISSION_DENIED_HELP).send();
 			plugin.soundConfig.playSound(sender, SoundId.COMMAND_FAIL);
 			return true;
 		}
 
 		// if no arguments, display usage for all commands
-		if (args.size() == 0) {
+		if (args.isEmpty())
+		{
 			displayUsageAll(sender);
 			return true;
 		}
 
 		// display subcommand help message or invalid command message
-		subcommandRegistry.getSubcommand(args.get(0)).ifPresentOrElse(
+		subcommandRegistry.getSubcommand(args.getFirst()).ifPresentOrElse(
 				subcommand -> sendCommandHelpMessage(sender, subcommand),
 				() -> sendCommandInvalidMessage(sender)
 		);
@@ -104,12 +110,15 @@ final class HelpSubcommand extends AbstractSubcommand implements Subcommand {
 	 * @param sender the command sender
 	 * @param subcommand the subcommand to display help description
 	 */
-	private void sendCommandHelpMessage(CommandSender sender, Subcommand subcommand) {
-		if (sender.hasPermission(subcommand.getPermissionNode())) {
+	private void sendCommandHelpMessage(final CommandSender sender, final Subcommand subcommand)
+	{
+		if (sender.hasPermission(subcommand.getPermissionNode()))
+		{
 			plugin.messageBuilder.compose(sender, subcommand.getDescription()).send();
 			subcommand.displayUsage(sender);
 		}
-		else {
+		else
+		{
 			plugin.messageBuilder.compose(sender, MessageId.COMMAND_HELP_INVALID).send();
 			plugin.soundConfig.playSound(sender, SoundId.COMMAND_INVALID);
 		}
@@ -121,7 +130,8 @@ final class HelpSubcommand extends AbstractSubcommand implements Subcommand {
 	 *
 	 * @param sender the command sender
 	 */
-	private void sendCommandInvalidMessage(CommandSender sender) {
+	private void sendCommandInvalidMessage(CommandSender sender)
+	{
 		plugin.messageBuilder.compose(sender, MessageId.COMMAND_HELP_INVALID).send();
 		plugin.soundConfig.playSound(sender, SoundId.COMMAND_INVALID);
 		displayUsageAll(sender);
@@ -133,8 +143,8 @@ final class HelpSubcommand extends AbstractSubcommand implements Subcommand {
 	 *
 	 * @param sender the command sender
 	 */
-	void displayUsageAll(final CommandSender sender) {
-
+	void displayUsageAll(final CommandSender sender)
+	{
 		plugin.messageBuilder.compose(sender, MessageId.COMMAND_HELP_USAGE_HEADER).send();
 
 		subcommandRegistry.getKeys().stream()
