@@ -18,28 +18,28 @@
 package com.winterhavenmc.savagegraveyards.commands;
 
 import com.winterhavenmc.savagegraveyards.PluginMain;
-import com.winterhavenmc.savagegraveyards.sounds.SoundId;
+import com.winterhavenmc.savagegraveyards.util.SoundId;
 import com.winterhavenmc.savagegraveyards.storage.Graveyard;
-import com.winterhavenmc.savagegraveyards.messages.Macro;
-import com.winterhavenmc.savagegraveyards.messages.MessageId;
+import com.winterhavenmc.savagegraveyards.util.Macro;
+import com.winterhavenmc.savagegraveyards.util.MessageId;
 
+import com.winterhavenmc.savagegraveyards.util.Config;
 import org.bukkit.ChatColor;
 import org.bukkit.Location;
 import org.bukkit.command.Command;
 import org.bukkit.command.CommandSender;
 import org.bukkit.entity.Player;
 
+import java.time.Duration;
 import java.util.*;
-
-import static com.winterhavenmc.util.TimeUnit.SECONDS;
 
 
 /**
  * Set command implementation<br>
  * changes graveyard settings
  */
-final class SetSubcommand extends AbstractSubcommand implements Subcommand {
-
+final class SetSubcommand extends AbstractSubcommand implements Subcommand
+{
 	private final PluginMain plugin;
 
 	private final static int CONFIG_DEFAULT = -1;
@@ -53,7 +53,8 @@ final class SetSubcommand extends AbstractSubcommand implements Subcommand {
 	 * Class constructor
 	 * @param plugin reference to plugin main class instance
 	 */
-	SetSubcommand(final PluginMain plugin) {
+	SetSubcommand(final PluginMain plugin)
+	{
 		this.plugin = Objects.requireNonNull(plugin);
 		this.name = "set";
 		this.usageString = "/graveyard set <graveyard> <attribute> <value>";
@@ -64,21 +65,25 @@ final class SetSubcommand extends AbstractSubcommand implements Subcommand {
 
 
 	@Override
-	public List<String> onTabComplete(final CommandSender sender, final Command command,
-									  final String alias, final String[] args) {
-
+	public List<String> onTabComplete(final CommandSender sender,
+	                                  final Command command,
+									  final String alias,
+									  final String[] args)
+	{
 		List<String> returnList = new ArrayList<>();
 
-		if (args.length == 2) {
+		if (args.length == 2)
+		{
 			// return list of valid matching graveyard names
 			returnList = plugin.dataStore.selectMatchingGraveyardNames(args[1]);
 		}
 
-		else if (args.length == 3) {
-
+		else if (args.length == 3)
+		{
 			for (String attribute : ATTRIBUTES) {
 				if (sender.hasPermission("graveyard.set." + attribute)
-						&& attribute.startsWith(args[2])) {
+						&& attribute.startsWith(args[2]))
+				{
 					returnList.add(attribute);
 				}
 			}
@@ -89,10 +94,11 @@ final class SetSubcommand extends AbstractSubcommand implements Subcommand {
 
 
 	@Override
-	public boolean onCommand(final CommandSender sender, final List<String> args) {
-
+	public boolean onCommand(final CommandSender sender, final List<String> args)
+	{
 		// check minimum arguments
-		if (args.size() < minArgs) {
+		if (args.size() < minArgs)
+		{
 			plugin.messageBuilder.compose(sender, MessageId.COMMAND_FAIL_ARGS_COUNT_UNDER).send();
 			displayUsage(sender);
 			plugin.soundConfig.playSound(sender, SoundId.COMMAND_FAIL);
@@ -100,14 +106,14 @@ final class SetSubcommand extends AbstractSubcommand implements Subcommand {
 		}
 
 		// get graveyard name from arguments ArrayList
-		String displayName = args.remove(0);
+		String displayName = args.removeFirst();
 
 		// fetch graveyard from datastore
 		Optional<Graveyard> optionalGraveyard = plugin.dataStore.selectGraveyard(displayName);
 
 		// if graveyard not found in datastore, send failure message and return
-		if (optionalGraveyard.isEmpty()) {
-
+		if (optionalGraveyard.isEmpty())
+		{
 			// create dummy graveyard to send to message manager
 			Graveyard dummyGraveyard = new Graveyard.Builder(plugin).displayName(displayName).build();
 
@@ -123,38 +129,22 @@ final class SetSubcommand extends AbstractSubcommand implements Subcommand {
 		Graveyard graveyard = optionalGraveyard.get();
 
 		// get attribute name and remove from arguments ArrayList
-		String attribute = args.remove(0);
+		String attribute = args.removeFirst();
 
 		// get value by joining remaining arguments
 		String value = String.join(" ", args).trim();
 
-		switch (attribute.toLowerCase()) {
-			case "location":
-				return setLocation(sender, graveyard);
-
-			case "name":
-				return setName(sender, graveyard, value);
-
-			case "enabled":
-				return setEnabled(sender, graveyard, value);
-
-			case "hidden":
-				return setHidden(sender, graveyard, value);
-
-			case "discoveryrange":
-				return setDiscoveryRange(sender, graveyard, value);
-
-			case "discoverymessage":
-				return setDiscoveryMessage(sender, graveyard, value);
-
-			case "respawnmessage":
-				return setRespawnMessage(sender, graveyard, value);
-
-			case "group":
-				return setGroup(sender, graveyard, value);
-
-			case "safetytime":
-				return setSafetyTime(sender, graveyard, value);
+		switch (attribute.toLowerCase())
+		{
+			case "location": return setLocation(sender, graveyard);
+			case "name": return setName(sender, graveyard, value);
+			case "enabled": return setEnabled(sender, graveyard, value);
+			case "hidden": return setHidden(sender, graveyard, value);
+			case "discoveryrange": return setDiscoveryRange(sender, graveyard, value);
+			case "discoverymessage": return setDiscoveryMessage(sender, graveyard, value);
+			case "respawnmessage": return setRespawnMessage(sender, graveyard, value);
+			case "group": return setGroup(sender, graveyard, value);
+			case "safetytime": return setSafetyTime(sender, graveyard, value);
 		}
 
 		// no matching attribute, send error message
@@ -173,20 +163,22 @@ final class SetSubcommand extends AbstractSubcommand implements Subcommand {
 	 * @return always returns {@code true} to suppress display of bukkit command usage
 	 * @throws NullPointerException if any parameter is null
 	 */
-	private boolean setLocation(final CommandSender sender, final Graveyard graveyard) {
-
+	boolean setLocation(final CommandSender sender, final Graveyard graveyard)
+	{
 		// check for null parameters
 		Objects.requireNonNull(sender);
 		Objects.requireNonNull(graveyard);
 
 		// sender must be in game player
-		if (!(sender instanceof Player player)) {
+		if (!(sender instanceof Player player))
+		{
 			plugin.messageBuilder.compose(sender, MessageId.COMMAND_FAIL_CONSOLE).send();
 			return true;
 		}
 
 		// check player permission
-		if (!player.hasPermission("graveyard.set.location")) {
+		if (!player.hasPermission("graveyard.set.location"))
+		{
 			plugin.messageBuilder.compose(sender, MessageId.PERMISSION_DENIED_SET_LOCATION).send();
 			plugin.soundConfig.playSound(sender, SoundId.COMMAND_FAIL);
 			return true;
@@ -203,7 +195,7 @@ final class SetSubcommand extends AbstractSubcommand implements Subcommand {
 		// send success message
 		plugin.messageBuilder.compose(player, MessageId.COMMAND_SUCCESS_SET_LOCATION)
 				.setMacro(Macro.GRAVEYARD, newGraveyard)
-				.setMacro(Macro.LOCATION, newGraveyard.getLocation())
+				.setMacro(Macro.LOCATION, newGraveyard.getOptLocation())
 				.send();
 
 		// play success sound
@@ -223,15 +215,16 @@ final class SetSubcommand extends AbstractSubcommand implements Subcommand {
 	 */
 	private boolean setName(final CommandSender sender,
 							final Graveyard graveyard,
-							final String passedString) {
-
+							final String passedString)
+	{
 		// check for null parameters
 		Objects.requireNonNull(sender);
 		Objects.requireNonNull(graveyard);
 		Objects.requireNonNull(passedString);
 
 		// check sender permission
-		if (!sender.hasPermission("graveyard.set.name")) {
+		if (!sender.hasPermission("graveyard.set.name"))
+		{
 			plugin.messageBuilder.compose(sender, MessageId.PERMISSION_DENIED_SET_NAME).send();
 			plugin.soundConfig.playSound(sender, SoundId.COMMAND_FAIL);
 			return true;
@@ -241,7 +234,8 @@ final class SetSubcommand extends AbstractSubcommand implements Subcommand {
 		String newName = passedString.trim();
 
 		// if new name is blank, send invalid name message
-		if (ChatColor.stripColor(ChatColor.translateAlternateColorCodes('&', newName)).isEmpty()) {
+		if (ChatColor.stripColor(ChatColor.translateAlternateColorCodes('&', newName)).isEmpty())
+		{
 			plugin.messageBuilder.compose(sender, MessageId.COMMAND_FAIL_SET_INVALID_NAME).send();
 			plugin.soundConfig.playSound(sender, SoundId.COMMAND_FAIL);
 			return true;
@@ -279,15 +273,16 @@ final class SetSubcommand extends AbstractSubcommand implements Subcommand {
 	 */
 	private boolean setEnabled(final CommandSender sender,
 							   final Graveyard graveyard,
-							   final String passedString) {
-
+							   final String passedString)
+	{
 		// check for null parameters
 		Objects.requireNonNull(sender);
 		Objects.requireNonNull(graveyard);
 		Objects.requireNonNull(passedString);
 
 		// check sender permission
-		if (!sender.hasPermission("graveyard.set.enabled")) {
+		if (!sender.hasPermission("graveyard.set.enabled"))
+		{
 			plugin.messageBuilder.compose(sender, MessageId.PERMISSION_DENIED_SET_ENABLED).send();
 			plugin.soundConfig.playSound(sender, SoundId.COMMAND_FAIL);
 			return true;
@@ -298,25 +293,30 @@ final class SetSubcommand extends AbstractSubcommand implements Subcommand {
 		boolean enabled;
 
 		// if value is empty, set to true
-		if (value.isEmpty()) {
+		if (value.isEmpty())
+		{
 			value = "true";
 		}
 
 		// if value is "default", set to configured default setting
-		if (value.equalsIgnoreCase("default")) {
-			enabled = plugin.getConfig().getBoolean("default-enabled");
+		if (value.equalsIgnoreCase("default"))
+		{
+			enabled = Config.DEFAULT_ENABLED.getBoolean(plugin.getConfig());
 		}
 		else if (value.equalsIgnoreCase("true")
 				|| value.equalsIgnoreCase("yes")
-				|| value.equalsIgnoreCase("y")) {
+				|| value.equalsIgnoreCase("y"))
+		{
 			enabled = true;
 		}
 		else if (value.equalsIgnoreCase("false")
 				|| value.equalsIgnoreCase("no")
-				|| value.equalsIgnoreCase("n")) {
+				|| value.equalsIgnoreCase("n"))
+		{
 			enabled = false;
 		}
-		else {
+		else
+		{
 			plugin.messageBuilder.compose(sender, MessageId.COMMAND_FAIL_SET_INVALID_BOOLEAN).send();
 			plugin.soundConfig.playSound(sender, SoundId.COMMAND_FAIL);
 			return true;
@@ -356,7 +356,24 @@ final class SetSubcommand extends AbstractSubcommand implements Subcommand {
 	 */
 	private boolean setHidden(final CommandSender sender,
 							  final Graveyard graveyard,
-							  final String passedString) {
+							  final String passedString)
+	{
+		enum HiddenStatus
+		{
+			TRUE(List.of("TRUE", "YES", "Y")),
+			FALSE(List.of("FALSE", "NO", "N")),
+			DEFAULT(List.of("DEFAULT"));
+
+			private final List<String> status;
+
+			HiddenStatus(final List<String> status) {
+				this.status = status;
+			}
+
+			boolean contains(String value) {
+				return this.status.contains(value.toUpperCase());
+			}
+		}
 
 		// check for null parameters
 		Objects.requireNonNull(sender);
@@ -364,7 +381,8 @@ final class SetSubcommand extends AbstractSubcommand implements Subcommand {
 		Objects.requireNonNull(passedString);
 
 		// check sender permission
-		if (!sender.hasPermission("graveyard.set.hidden")) {
+		if (!sender.hasPermission("graveyard.set.hidden"))
+		{
 			plugin.messageBuilder.compose(sender, MessageId.PERMISSION_DENIED_SET_HIDDEN).send();
 			plugin.soundConfig.playSound(sender, SoundId.COMMAND_FAIL);
 			return true;
@@ -375,24 +393,26 @@ final class SetSubcommand extends AbstractSubcommand implements Subcommand {
 		boolean hidden;
 
 		// if value is empty, set to true
-		if (value.isEmpty()) {
+		if (value.isEmpty())
+		{
 			value = "true";
 		}
 
-		if (value.equalsIgnoreCase("default")) {
-			hidden = plugin.getConfig().getBoolean("default-hidden");
+		if (HiddenStatus.DEFAULT.contains(value))
+		{
+			hidden = Config.DEFAULT_HIDDEN.getBoolean(plugin.getConfig());
 		}
-		else if (value.equalsIgnoreCase("true")
-				|| value.equalsIgnoreCase("yes")
-				|| value.equalsIgnoreCase("y")) {
+
+		else if (HiddenStatus.TRUE.contains(value))
+		{
 			hidden = true;
 		}
-		else if (value.equalsIgnoreCase("false")
-				|| value.equalsIgnoreCase("no")
-				|| value.equalsIgnoreCase("n")) {
+		else if (HiddenStatus.FALSE.contains(value))
+		{
 			hidden = false;
 		}
-		else {
+		else
+		{
 			plugin.messageBuilder.compose(sender, MessageId.COMMAND_FAIL_SET_INVALID_BOOLEAN).send();
 			plugin.soundConfig.playSound(sender, SoundId.COMMAND_FAIL);
 			return true;
@@ -430,15 +450,16 @@ final class SetSubcommand extends AbstractSubcommand implements Subcommand {
 	 */
 	private boolean setDiscoveryRange(final CommandSender sender,
 									  final Graveyard graveyard,
-									  final String passedString) {
-
+									  final String passedString)
+	{
 		// check for null parameters
 		Objects.requireNonNull(sender);
 		Objects.requireNonNull(graveyard);
 		Objects.requireNonNull(passedString);
 
 		// check sender permission
-		if (!sender.hasPermission("graveyard.set.discoveryrange")) {
+		if (!sender.hasPermission("graveyard.set.discoveryrange"))
+		{
 			plugin.messageBuilder.compose(sender, MessageId.PERMISSION_DENIED_SET_DISCOVERYRANGE).send();
 			plugin.soundConfig.playSound(sender, SoundId.COMMAND_FAIL);
 			return true;
@@ -449,20 +470,22 @@ final class SetSubcommand extends AbstractSubcommand implements Subcommand {
 
 		// if no distance given, or string "default",
 		// set to CONFIG_DEFAULT to use configured default value
-		if (passedString.isEmpty() || passedString.equalsIgnoreCase("default")) {
+		if (passedString.isEmpty() || passedString.equalsIgnoreCase("default"))
+		{
 			//noinspection ConstantConditions
 			discoveryRange = CONFIG_DEFAULT;
 		}
 
 		// if value is string "player", attempt to use player distance
 		else if (passedString.equalsIgnoreCase("player")
-				|| passedString.equalsIgnoreCase("current")) {
+				|| passedString.equalsIgnoreCase("current"))
+		{
 
 			// if sender is player, use player's current distance
-			if (sender instanceof Player player && graveyard.getLocation().isPresent()) {
-
+			if (sender instanceof Player player && graveyard.getOptLocation().isPresent())
+			{
 				// unwrap optional location
-				Location location = graveyard.getLocation().get();
+				Location location = graveyard.getOptLocation().get();
 
 				// check that player is in same world as graveyard
 				if (player.getWorld().getUID().equals(graveyard.getWorldUid())) {
@@ -470,12 +493,15 @@ final class SetSubcommand extends AbstractSubcommand implements Subcommand {
 				}
 			}
 		}
-		else {
+		else
+		{
 			// try to parse entered range as integer
-			try {
+			try
+			{
 				discoveryRange = Integer.parseInt(passedString);
 			}
-			catch (NumberFormatException e) {
+			catch (NumberFormatException e)
+			{
 				plugin.messageBuilder.compose(sender, MessageId.COMMAND_FAIL_SET_INVALID_INTEGER).send();
 				plugin.soundConfig.playSound(sender, SoundId.COMMAND_FAIL);
 				return true;
@@ -491,13 +517,15 @@ final class SetSubcommand extends AbstractSubcommand implements Subcommand {
 		plugin.dataStore.updateGraveyard(newGraveyard);
 
 		// send success message
-		if (discoveryRange < 0) {
+		if (discoveryRange < 0)
+		{
 			plugin.messageBuilder.compose(sender, MessageId.COMMAND_SUCCESS_SET_DISCOVERYRANGE_DEFAULT)
 					.setMacro(Macro.GRAVEYARD, newGraveyard)
-					.setMacro(Macro.VALUE, plugin.getConfig().getInt("discovery-range"))
+					.setMacro(Macro.VALUE, Config.DISCOVERY_RANGE.getInt(plugin.getConfig()))
 					.send();
 		}
-		else {
+		else
+		{
 			plugin.messageBuilder.compose(sender, MessageId.COMMAND_SUCCESS_SET_DISCOVERYRANGE)
 					.setMacro(Macro.GRAVEYARD, newGraveyard)
 					.setMacro(Macro.VALUE, String.valueOf(discoveryRange))
@@ -521,15 +549,16 @@ final class SetSubcommand extends AbstractSubcommand implements Subcommand {
 	 */
 	private boolean setDiscoveryMessage(final CommandSender sender,
 										final Graveyard graveyard,
-										final String passedString) {
-
+										final String passedString)
+	{
 		// check for null parameters
 		Objects.requireNonNull(sender);
 		Objects.requireNonNull(graveyard);
 		Objects.requireNonNull(passedString);
 
 		// check sender permission
-		if (!sender.hasPermission("graveyard.set.discoverymessage")) {
+		if (!sender.hasPermission("graveyard.set.discoverymessage"))
+		{
 			plugin.messageBuilder.compose(sender, MessageId.PERMISSION_DENIED_SET_DISCOVERYMESSAGE).send();
 			plugin.soundConfig.playSound(sender, SoundId.COMMAND_FAIL);
 			return true;
@@ -539,7 +568,8 @@ final class SetSubcommand extends AbstractSubcommand implements Subcommand {
 		String discoveryMessage = passedString;
 
 		// if message is 'default', set message to empty string
-		if (discoveryMessage.equalsIgnoreCase("default")) {
+		if (discoveryMessage.equalsIgnoreCase("default"))
+		{
 			discoveryMessage = "";
 		}
 
@@ -552,12 +582,14 @@ final class SetSubcommand extends AbstractSubcommand implements Subcommand {
 		plugin.dataStore.updateGraveyard(newGraveyard);
 
 		// send success message
-		if (discoveryMessage.isEmpty()) {
+		if (discoveryMessage.isEmpty())
+		{
 			plugin.messageBuilder.compose(sender, MessageId.COMMAND_SUCCESS_SET_DISCOVERYMESSAGE_DEFAULT)
 					.setMacro(Macro.GRAVEYARD, newGraveyard)
 					.send();
 		}
-		else {
+		else
+		{
 			plugin.messageBuilder.compose(sender, MessageId.COMMAND_SUCCESS_SET_DISCOVERYMESSAGE)
 					.setMacro(Macro.GRAVEYARD, newGraveyard)
 					.send();
@@ -588,7 +620,8 @@ final class SetSubcommand extends AbstractSubcommand implements Subcommand {
 		Objects.requireNonNull(passedString);
 
 		// check sender permission
-		if (!sender.hasPermission("graveyard.set.respawnmessage")) {
+		if (!sender.hasPermission("graveyard.set.respawnmessage"))
+		{
 			plugin.messageBuilder.compose(sender, MessageId.PERMISSION_DENIED_SET_RESPAWNMESSAGE).send();
 			plugin.soundConfig.playSound(sender, SoundId.COMMAND_FAIL);
 			return true;
@@ -598,7 +631,8 @@ final class SetSubcommand extends AbstractSubcommand implements Subcommand {
 		String respawnMessage = passedString;
 
 		// if message is 'default', set message to empty string
-		if (respawnMessage.equalsIgnoreCase("default")) {
+		if (respawnMessage.equalsIgnoreCase("default"))
+		{
 			respawnMessage = "";
 		}
 
@@ -609,12 +643,14 @@ final class SetSubcommand extends AbstractSubcommand implements Subcommand {
 		plugin.dataStore.updateGraveyard(newGraveyard);
 
 		// send success message
-		if (respawnMessage.isEmpty()) {
+		if (respawnMessage.isEmpty())
+		{
 			plugin.messageBuilder.compose(sender, MessageId.COMMAND_SUCCESS_SET_RESPAWNMESSAGE_DEFAULT)
 					.setMacro(Macro.GRAVEYARD, newGraveyard)
 					.send();
 		}
-		else {
+		else
+		{
 			plugin.messageBuilder.compose(sender, MessageId.COMMAND_SUCCESS_SET_RESPAWNMESSAGE)
 					.setMacro(Macro.GRAVEYARD, newGraveyard)
 					.send();
@@ -637,15 +673,16 @@ final class SetSubcommand extends AbstractSubcommand implements Subcommand {
 	 */
 	private boolean setGroup(final CommandSender sender,
 							 final Graveyard graveyard,
-							 final String passedString) {
-
+							 final String passedString)
+	{
 		// check for null parameters
 		Objects.requireNonNull(sender);
 		Objects.requireNonNull(graveyard);
 		Objects.requireNonNull(passedString);
 
 		// check sender permission
-		if (!sender.hasPermission("graveyard.set.group")) {
+		if (!sender.hasPermission("graveyard.set.group"))
+		{
 			plugin.messageBuilder.compose(sender, MessageId.PERMISSION_DENIED_SET_GROUP).send();
 			plugin.soundConfig.playSound(sender, SoundId.COMMAND_FAIL);
 			return true;
@@ -680,38 +717,23 @@ final class SetSubcommand extends AbstractSubcommand implements Subcommand {
 	 */
 	private boolean setSafetyTime(final CommandSender sender,
 								  final Graveyard graveyard,
-								  final String passedString) {
-
+								  final String passedString)
+	{
 		// check for null parameters
 		Objects.requireNonNull(sender);
 		Objects.requireNonNull(graveyard);
 		Objects.requireNonNull(passedString);
 
 		// check sender permission
-		if (!sender.hasPermission("graveyard.set.safetytime")) {
+		if (!sender.hasPermission("graveyard.set.safetytime"))
+		{
 			plugin.messageBuilder.compose(sender, MessageId.PERMISSION_DENIED_SET_SAFETYTIME).send();
 			plugin.soundConfig.playSound(sender, SoundId.COMMAND_FAIL);
 			return true;
 		}
 
 		// declare safety time to be set
-		int safetyTime;
-
-		// if passed string is "default" or empty, set safety time to negative to use configured default
-		if (passedString.equalsIgnoreCase("default") || passedString.isEmpty()) {
-			safetyTime = CONFIG_DEFAULT;
-		}
-		else {
-			// try to parse entered safety time as integer
-			try {
-				safetyTime = Integer.parseInt(passedString);
-			}
-			catch (NumberFormatException e) {
-				plugin.messageBuilder.compose(sender, MessageId.COMMAND_FAIL_SET_INVALID_INTEGER).send();
-				plugin.soundConfig.playSound(sender, SoundId.COMMAND_FAIL);
-				return true;
-			}
-		}
+		Duration safetyTime  = Duration.ofSeconds(CONFIG_DEFAULT);
 
 		// create new graveyard object with from existing graveyard with new safety time
 		Graveyard newGraveyard = new Graveyard.Builder(graveyard)
@@ -722,16 +744,18 @@ final class SetSubcommand extends AbstractSubcommand implements Subcommand {
 		plugin.dataStore.updateGraveyard(newGraveyard);
 
 		// send success message
-		if (safetyTime == CONFIG_DEFAULT) {
+		if (safetyTime.equals(Duration.ofSeconds(CONFIG_DEFAULT)))
+		{
 			plugin.messageBuilder.compose(sender, MessageId.COMMAND_SUCCESS_SET_SAFETYTIME_DEFAULT)
 					.setMacro(Macro.GRAVEYARD, newGraveyard)
-					.setMacro(Macro.DURATION, SECONDS.toMillis(plugin.getConfig().getInt("safety-time")))
+					.setMacro(Macro.DURATION, Duration.ofSeconds(Config.SAFETY_TIME.getInt(plugin.getConfig())))
 					.send();
 		}
-		else {
+		else
+		{
 			plugin.messageBuilder.compose(sender, MessageId.COMMAND_SUCCESS_SET_SAFETYTIME)
 					.setMacro(Macro.GRAVEYARD, newGraveyard)
-					.setMacro(Macro.DURATION, SECONDS.toMillis(safetyTime))
+					.setMacro(Macro.DURATION, safetyTime)
 					.send();
 		}
 
